--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -29,17 +29,17 @@
   <section class="container">
       <div class="card">
         <div class="card-image car-1"></div>
-          <h2>Title</h2>
-          <p>This is a paragraph about the first image.</p>
+          <h2>Business</h2>
+          <p>For business people, maintaining an accurate expense tracker is vital for financial control and decision-making. By recording and categorizing expenses, they gain insights into spending patterns, identify areas of overspending or cost-saving opportunities, and track the profitability of their ventures. Expense tracking enables budgeting, tax preparation, and financial reporting, aiding in maintaining a healthy bottom line and optimizing business operations.</p>
           </div>
         <div class="card">
           <div class="card-image car-2"></div>
-          <h2>Title</h2>
+          <h2>Family</h2>
           <p>This is a paragraph about the second image.</p>
         </div>
         <div class="card">
         <div class="card-image car-3"></div>
-          <h2>Title</h2>
+          <h2>Students</h2>
           <p>This is a paragraph about the third image.</p>
         </div>
   </section>
