--- a/templates/static/css/main.css
+++ b/templates/static/css/main.css
@@ -22,6 +22,7 @@ body {
 
 /*registration form */
 .lregister-container {
+  display: none;
   position: fixed;
   right: 0;
   top: 0;
@@ -32,9 +33,10 @@ body {
   border-left: 1px solid #ddd;
 }
 
-.collapse.show .lregister-container {
+.registration-form-visible {
   display: block;
 }
+
 /* ... */
 
 
