--- a/templates/static/css/faqs.css
+++ b/templates/static/css/faqs.css
@@ -1,163 +1,49 @@
-/* main.css */
-
-/* Global Styles */
-
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
-  margin: 0;
-  padding: 0;
+	background: -webkit-linear-gradient(left, #a445b2, #6a8fdf);
+	font-family: "Roboto", sans-serif;
 }
 
-.container {
-  max-width: 800px;
-  margin: 40px auto;
-  padding: 0 20px;
+.main-content {
+	padding-top: 100px;
+	padding-bottom: 100px;
 }
 
-h2 {
-  text-align: center;
-  margin-bottom: 20px;
+.flex-center {
+	align-items: center;
+}
+.accordion-button{
+	margin-bottom: 10px;
+}
+.accordion-body {
+	margin-top: 15px;
+	padding: 25px;
+	background: #fff;
+	border-radius: 5px;
+	box-shadow: 0 2px 25px -3px rgba(0, 0, 0, 0.1);
+	margin-bottom: 10px;
 }
 
-h3 {
-  margin-top: 40px;
+.circle-icon {
+	height: 50px;
+	width: 50px;
+	border-radius: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: #2b4eff;
+    border: 5px solid #b2bfff;
+	color: #fff;
+	margin-left: -20px;
+	margin-right: 10px;
+	transform: scale(1.2);
 }
-
-p {
-  line-height: 1.6;
+.accordion-item{
+	border: 0px!important;
 }
-
-/* FAQ Section */
-
-.faq-question {
-  width: 100%;
-  text-align: left;
-  padding: 10px;
-  margin-bottom: 10px;
-  background-color: #f5f5f5;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.faq-question:hover {
-  background-color: #e9e9e9;
-}
-
-/* Footer */
-
-.footer {
-  background-color: #24262b;
-  padding: 20px;
-  text-align: center;
-  margin-top: auto; /* Added */
-}
-
-.block {
-  max-width: 1170px;
-  background-color: blaliceblue;
-  margin: auto;
-}
-
-.row {
-  display: flexbox;
-  flex-wrap: wrap;
-}
-
-.footer-col {
-  width: 25%;
-  padding: 0 15px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.footer-col h4 {
-  font-size: 18px;
-  color: #ffffff;
-  text-transform: capitalize;
-  margin-bottom: 30px;
-  font-weight: 500;
-  display: inline-block;
-  position: relative;
-}
-
-.footer-col h4::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -10px;
-  background-color: #e91e63;
-  height: 2px;
-  box-sizing: border-box;
-  width: 100%;
-}
-
-.footer-col h4 img {
-  max-width: 40px;
-  margin-right: 10px;
-}
-
-.footer-col ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-.footer-col ul li {
-  margin-bottom: 10px;
-}
-
-.footer-col ul li a {
-  font-size: 16px;
-  text-transform: capitalize;
-  color: #ffffff;
-  text-decoration: none;
-  font-weight: 300;
-  color: #bbbbbb;
-}
-
-.footer-col ul li a:hover {
-  color: #ffffff;
-  padding-left: 10px;
-}
-
-.social-links {
-  display: flex;
-  justify-content: center;
-  margin-top: 10px;
-}
-
-.social-links a {
-  display: inline-block;
-  height: 40px;
-  width: 40px;
-  background-color: rgba(255, 255, 255, 0.2);
-  margin-right: 10px;
-  text-align: center;
-  line-height: 40px;
-  border-radius: 50%;
-  color: #ffffff;
-  transition: all 0.3s ease;
-}
-
-.social-links a:hover {
-  color: #e91e63;
-  background-color: #ffffff;
-}
-
-/*@media responsiveness*/
-@media (max-width: 762px) {
-  .footer-col {
-    width: 50%;
-    margin-bottom: 30px;
-  }
-}
-
-@media (max-width: 574px) {
-  .footer-col {
-    width: 100%;
-  }
+.accordion-button:not(.collapsed){
+	border: 0px!important;
+	color: #0c63e4;
+    background-color: #ffffff;
+    box-shadow: inset 0 0px 0 rgb(0 0 0 / 13%);
 }
