--- a/Templates/static/css/login.css
+++ b/Templates/static/css/login.css
@@ -22,7 +22,7 @@ html,body{
   background: #fff;
   padding: 30px;
   border-radius: 5px;
-  box-shadow: 0px 15px 20px rgba(5, 5, 5, 0.1);
+  box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
 }
 .wrapper .title-text{
   display: flex;
