--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -15,10 +15,11 @@
 <body>
     <header>
         <nav class="navbar">
-            <h2> Expense Tracker </h2>
+            <img src="static/css/images/logo.png" alt="Logo" width="100" height="60" class=" align-text-top">
             <ul id="list">
                 <li><a href="index.html"> Home </a></li>
                 <li><a href="login.html"> Login </a></li>
+                <li><a href="contactus.html"> Contact Us </a></li>
                 <li><a href="aboutus.html"> About Us </a></li>
             </ul>
             <ul id="res">
@@ -27,13 +28,14 @@
             <ul class="responsive">
                 <li><a href="index.html"> Home </a></li>
                 <li><a href="login.html"> Login </a></li>
+                <li><a href="contactus.html"> Contact Us </a></li>
                 <li><a href="aboutus.html"> About Us </a></li>
             </ul>
         </nav>
     </header>
     <section id="home">
         <div class="home-left">
-            <img src="" alt="">
+            <img src="static/css/images/back1.jpg" alt="">
         </div>
         <div class="home-right">
             <h2 class="home-heading"> Expense Tracker </h2>
@@ -53,14 +55,14 @@
             </p>
         </div>
         <div class="goal-right">
-            <img src="" alt="">
+            <img src="static/css/images/back2.jpg" alt="">
         </div>
     </section>
     <section id="our-Team">
         <h2>Our Team Members</h2>
         <div class="teamContainer">
             <div class="team-item">
-                <img src="" alt="">
+                <img src="static/css/images/Robert.jpeg" alt="">
                 <h5 class="member-name">Robert Njonjo</h5>
                 <span class="role">Software Engineer</span>
                 <div class>
@@ -70,7 +72,7 @@
               </div>
             </div>
             <div class="team-item">
-                <img src="" alt="">
+                <img src="static/css/images/dennis.jpeg" alt="">
                 <h5 class="member-name">Dennis Kamau</h5>
                 <span class="role">Software Engineer</span>
                 <div class>
@@ -80,7 +82,7 @@
               </div>
             </div>
             <div class="team-item">
-                <img src="" alt="">
+                <img src="static/css/images/Rimg.jpg" alt="">
                 <h5 class="member-name">Rim El Filali</h5>
                 <span class="role">Software Engineer</span>
                 <div class>
