--- a/templates/static/css/main.css
+++ b/templates/static/css/main.css
@@ -10,7 +10,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-image: url("/templates/static/css/images/background.avif");
+  background-image: url("images/background.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -61,15 +61,27 @@ body {
 }
 
 .car-1 {
-  background-image: url("/templates/static/css/images/business.jpg");
+  background-image: url("images/business.jpg");
 }
 
 .car-2 {
-  background-image: url("/templates/static/css/images/family.jpg");
+  background-image: url("images/family.jpg");
 }
 
 .car-3 {
-  background-image: url("/templates/static/css/images/istockphoto-138017387-612x612.jpg");
+  background-image: url("images/istockphoto-138017387-612x612.jpg");
+}
+
+.car-4 {
+  background-image: url("images/feature1.jpg");
+}
+
+.car-5 {
+  background-image: url("images/feature2.jpg");
+}
+
+.car-6 {
+  background-image: url("images/feature3.png");
 }
 
 .card p {
@@ -77,7 +89,7 @@ body {
 }
 
 .card:hover {
-  background-color: aqua;
+  background-color:#bbbbbb;
   color: white;
   cursor: pointer;
   transform: scale(1.03);
