--- a/templates/index.html
+++ b/templates/index.html
@@ -42,11 +42,11 @@
 
   <section class="jumbotron text-center" style="background-image: url(static/css/images/back3.jpg);">
     <div class="container">
-      <h3 style="color: blanchedalmond;">Track your expenses and manage your finances with ease using our expense tracker.</h3>
+      <h3 style="color: blanchedalmond;">Track your expenses and manage your finances with ease using our ExpenseTracker.</h3>
     </div>
   </section>
 
-  <h2 class = "text-center" style="white-space: pre-wrap">Who Can Use Our Expense Tracker?</h2>
+  <h2 class = "text-center" style="white-space: pre-wrap; color:midnightblue;">Who Can Use Our Expense Tracker?</h2>
   <br>
   <section class="container text-center">
     <br><br>
@@ -70,7 +70,7 @@
 
   <br><br>
 
-  <h2 class = "text-center" style="white-space: pre-wrap">Features</h2>
+  <h2 class = "text-center" style="white-space: pre-wrap; color:midnightblue;">Features</h2>
   <br>
   <section class="container text-center">
     <div class="card">
