--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -3,13 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Homepage</title>
+  <title>Contact Us</title>
   <link rel="stylesheet" href="static/css/main.css">
+  <link rel="stylesheet" href="static/css/contactus.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <style>
-    /* Add your custom styles here */
-  </style>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -39,7 +37,7 @@
     </div>
   </nav>
   <section class="contact-us">
-    <h1>Contact Us</h1>
+    <h1 style="color:midnightblue;">Contact Us</h1>
     <form>
       <div>
         <label for="name">Name:</label>
